kubernetes-manifests/react-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: react-ui
  template:
    metadata:
      labels:
        app: react-ui
    spec:
      containers:
        - name: react-ui
          image: CONTAINER_IMAGE
