kubernetes-manifests/react-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-ui-service
spec:
  selector:
    app: react-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
