kubernetes-manifests/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:305637245863:certificate/8986b4fe-0bd4-4f8c-85f9-1f93e901e1fe
    external-dns.alpha.kubernetes.io/hostname: kubedemo2.loke19.shop
spec:
  rules:
    - host: kubedemo2.loke19.shop
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
